--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="circle-2"></div>
 
                 <!-- Replace the image below with your own, change the "alt" text to your name -->
-                <img src="example.jpg" alt="Jazmyn Felicity">
+                <img src="jack-stevenson.jpg" alt="Jack Stevenson">
                 <!-- Replace the image above with your own, change the "alt" text to your name -->
 
                 <div class='overlay'></div>
@@ -32,7 +32,7 @@
                 <div class="name1">
 
                 <!-- Replace the name below with your name -->
-                    Jazmyn Felicity
+                    Jack Stevenson
                 <!-- Replace the name above with your name -->
 
                 </div>
@@ -45,13 +45,13 @@
 
                             <!-- Replace the items below with your own, edit between the > and < symbols -->
 
-                            <div class="element">Developer</div>
-                            <div class="element">Designer</div>
-                            <div class="element">Teacher</div>
-                            <div class="element">Gamer</div>
+                            <div class="element">Problem solver</div>
+                            <div class="element">Programmer</div>
+                            <div class="element">Student</div>
+                            <div class="element">Biker</div>
 
                             <!-- for a smooth transistion animation, repeat your first item below-->
-                            <div class="element">Developer</div>
+                            <div class="element">Problem solver</div>
 
                             <!-- Replace the items above with your own -->
 
