--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<div class="circle-2"></div>
 
                 <!-- Replace the image below with your own, change the "alt" text to your name -->
-				<img src="example.jpg" alt="Jazmyn Felicity">
+				<img src="jack-stevenson.jpg" alt="Jack Stevenson">
                 <!-- Replace the image above with your own, change the "alt" text to your name -->
 
 
@@ -75,7 +75,7 @@
 			<div class="name">
                 
                 <!-- Replace the name below with your name -->
-                Jazmyn Felicity
+                Jack Stevenson
                 <!-- Replace the name above with your name -->
             
             </div>
@@ -100,20 +100,20 @@
 
             <!-- Modify the items below make them your own, edit the numbers or text between the > and < symbols -->
 			<div class="box">
-				<span class="value">9</span> <!-- Change the number to go with the title on the line below -->
+				<span class="value">15</span> <!-- Change the number to go with the title on the line below -->
 				<span class="parameter">Years <br> Teaching</span> <!-- Change the title to go with the number on the line above -->
 			</div>
 			<div class="box">
-				<span class="value">23</span>
-				<span class="parameter">States <br> Visited</span>
+				<span class="value">9</span>
+				<span class="parameter">Countries <br> Visited</span>
 			</div>
 			<div class="box">
-				<span class="value">100+</span>
+				<span class="value">500+</span>
 				<span class="parameter">Published <br> Sites</span>
 			</div>
             <div class="box">
-				<span class="value">1672</span>
-				<span class="parameter">Steam <br> Library</span>
+				<span class="value">573</span>
+				<span class="parameter">Personal <br> Library</span>
 			</div>
             <!-- Modify the items above make them your own, edit the numbers or text between the > and < symbols -->
 
