--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 
                             <!-- Replace the items below with your own, edit between the > and < symbols -->
 
-                            <div class="element">Problem solver</div>
+                            <div class="element">Solver</div>
                             <div class="element">Programmer</div>
                             <div class="element">Student</div>
                             <div class="element">Biker</div>
 
                             <!-- for a smooth transistion animation, repeat your first item below-->
-                            <div class="element">Problem solver</div>
+                            <div class="element">Solver</div>
 
                             <!-- Replace the items above with your own -->
 
